# Vibhu-Oska

./: .gitignore  BeforeStartRefer.md  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  README.md  README1.md  SECURITY.md  pyproject.toml  requirements.txt
Backend/: EntryPoint.py  functions.py  readme.md
Backend/Core/: core.md
Backend/Core/BackupCore/: BackupCore.py  backup1.py  readme.md
Backend/Core/ContextManager/: ContextManager.py  readme.md
Backend/Core/EventBus/: EventBus.py  Events.py  Topics.py  readme.md
Backend/Core/Watchdog/: Watchdog.py  readme.md
Backend/Gateway/: App.py  McpServer.py  readme.md
Backend/Plugins/: readme.md
Backend/Plugins/AuthenticationManager/: AuthenticationManager.py
Backend/Plugins/CacheManager/: CacheManager.py
Backend/Plugins/CodeAnalyzer/: CodeAnalyzer.py
Backend/Plugins/ConfigLoader/: ConfigLoader.py
Backend/Plugins/DatabaseConnector/: DatabaseConnector.py
Backend/Plugins/FeedbackCollector/: FeedbackCollector.py
Backend/Plugins/Logger/: Logger.py
Backend/Plugins/ReplayLogger/: ReplayLogger.py
Backend/Plugins/Scheduler/: Scheduler.py
Backend/Plugins/SearchEngine/: SearchEngine.py
Backend/Plugins/SelfUpdater/: SelfUpdater.py
Backend/Plugins/TestingFramework/: TestingFramework.py
Backend/Plugins/ThermalMonitor/: ThermalMonitor.py
Data/: .gitkeep  vibhu_oska.db
Docker/: Dockerfile.gateway  Dockerfile.sandbox  docker-compose.yml
Frontend/next_app/: package-lock.json  package.json
Frontend/unity_app/: unity_app.md
Frontend/web_app/: web_app.md
Frontend/web_app/static/: ChatData.js  (+1 more)
Log/: log.md
Models/: .gitkeep  readme.md  registry.json
Models/reasoning/: __init__.py  finetune.py  readme.md
Models/router/: __init__.py  architecture.py  dataset_generator.py  readme.md  train.py
Models/sovereign_gpt/: __init__.py  architecture.py  generate.py  readme.md  tokenizer.py  train.py
Scripts/: generate_protos.sh  scripts.md  setup.sh  train_router.sh  train_sovereign_gpt.sh
Shared/: Models.py  readme.md  shared.md
Shared/protos/: brain.proto  common.proto  protocols.md  router.proto  telemetry.proto
Tests/: conftest.py  readme.md  test_brain_stem.py  test_skeleton.py  test_specialized_cores.py
Vibhu_OSKA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WorkingNotes/: notes.md  toadd.md
WorkingNotes/codebase_notes/: 00-overview.md  01-entry-and-boot.md  02-event-bus.md  03-orchestration-pipeline.md  04-cognition-and-models.md  05-memory-and-data.md  06-specialized-cores.md  07-plugins-registry.md  08-models-training.md  09-shared-and-protos.md  10-tests-and-dev.md  11-run-guide.md  12-stage-roadmap.md
config/: default.yaml  development.yaml
(+42 files in other folders)
