[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Vibhu-OSKA"
version = "0.2.0"
description = "Autonomous AI Operating Layer — Self-hosted intelligence fabric for edge hardware"
authors = [{name = "Harsh Dev Jha (Inkesk-Dozing)", email = "inkeskdozing@gmail.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

dependencies = [
    # ── Core Framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # ── Serialization & Validation ──
    "protobuf>=5.28.0",
    "pydantic>=2.9.0",

    # ── Event Bus ──
    "pyzmq>=26.2.0",

    # ── Configuration ──
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",

    # ── Database & Memory ──
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",

    # ── Logging & Monitoring ──
    "structlog>=24.4.0",
    "rich>=13.9.0",

    # ── AI/ML (installed separately for CUDA) ──
    # torch, transformers, bitsandbytes, peft, unsloth
    # installed via: pip install torch --index-url https://download.pytorch.org/whl/cu121

    # ── Utilities ──
    "httpx>=0.27.0",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
ml = [
    "transformers>=4.46.0",
    "datasets>=3.1.0",
    "accelerate>=1.1.0",
    "bitsandbytes>=0.44.0",
    "peft>=0.13.0",
    "sentencepiece>=0.2.0",
    "onnxruntime>=1.20.0",
]

[project.scripts]
vibhu-oska = "Backend.EntryPoint:main"
vibhu-oska-mcp = "Backend.Gateway.McpServer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Backend*", "Frontend*", "Shared*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["Tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true